Describe brevemente tus cambios

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,7 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAUxH3kfylUR9lfL2lndAISo1a23VDeFAU
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=vacantes-uas.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=vacantes-uas
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=vacantes-uas.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=392997622281
+NEXT_PUBLIC_FIREBASE_APP_ID=1:392997622281:web:5a9b6a735cd18eaef25ed8
+
